# qt6-study

./: LICENSE  README.md
hello-01/: CMakeLists.txt  mainwindow.cpp  res.qrc
hello-02/: .gitignore  CMakeLists.txt
hello-02/src/: CMakeLists.txt
hello-02/src/app/: CMakeLists.txt  mainwindow.cpp
hello-02/src/person/: CMakeLists.txt  person.cpp  person.h
